@@ -364,4 +364,13 @@ class Ingo_Storage
         return $descrip;
     }
 
+    /**
+     * Clears the internal rule cache.
+     *
+     * @since Ingo 3.2.12
+     */
+    public function clearCache()
+    {
+        $this->_cache = array();
+    }
 }
