@@ -33,6 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/apache">ASL</license>
  <notes>
+* [jan] Fix using ingo-convert-prefs-to-sql for multiple users.
 * [mjr] Fix incorrect flag usage in Procmail vacation recipe (Bug #14397).
 * [mjr] Fix escaping mailbox names that contain utf7-imap encodings (Bug #14429).
 * [jan] Fix creating new spam folders.
@@ -1676,6 +1677,7 @@
    <date>2016-07-01</date>
    <license uri="http://www.horde.org/licenses/apache">ASL</license>
    <notes>
+* [jan] Fix using ingo-convert-prefs-to-sql for multiple users.
 * [mjr] Fix incorrect flag usage in Procmail vacation recipe (Bug #14397).
 * [mjr] Fix escaping mailbox names that contain utf7-imap encodings (Bug #14429).
 * [jan] Fix creating new spam folders.
